override svg vertical align to correct prod

--- a/src/manual-gimbap-simple/index.scss
+++ b/src/manual-gimbap-simple/index.scss
@@ -3,3 +3,7 @@
 @import '_gimbap-logo';
 @import '_gimbap-wrap';
 @import '_gimbap';
+
+.gimbap__arrow svg {
+  vertical-align: initial;
+}
